--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Shwe Booking</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">Bagan Hmwe Hotel</string>
+    <string name="nav_header_subtitle">Sindhu Kumari</string>
     <string name="nav_header_desc">Shwe Booking</string>
     <string name="action_settings">Settings</string>
 
