--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="nav_header_subtitle">Sindhu Kumari</string>
     <string name="nav_header_desc">Shwe Booking</string>
     <string name="action_settings">Settings</string>
+    <string name="action_search">Search</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_booking">Booking</string>
